--- a/codeacademy/scratchFile-000/index.html
+++ b/codeacademy/scratchFile-000/index.html
@@ -14,6 +14,7 @@
 <body>
 <h1>JS scratchpad</h1>
 
-<script src="./js/mini-linter.js"></script>
+<!--<script src="./js/mini-linter.js"></script>-->
+<script src="./js/sortSpeciesByTeeth.js"></script>
 </body>
 </html>
