working on a dog factory

--- a/codeacademy/scratchFile-000/index.html
+++ b/codeacademy/scratchFile-000/index.html
@@ -15,6 +15,8 @@
 <h1>JS scratchpad</h1>
 
 <!--<script src="./js/mini-linter.js"></script>-->
-<script src="./js/sortSpeciesByTeeth.js"></script>
+<!--<script src="./js/sortSpeciesByTeeth.js"></script>-->
+<!--<script src="./js/findMyKeys.js"></script>-->
+<script src="./js/dogFactory.js"></script>
 </body>
 </html>
